UX issue - social media icons stacked instead of aligned #410

--- a/web/source/sass/pages/dispensary/dispensary_info.scss
+++ b/web/source/sass/pages/dispensary/dispensary_info.scss
@@ -247,7 +247,6 @@
             position: absolute;
             top: -11.2em;
             left: 0;
-            width: 7em;
 
             span {
                 margin-right: 0.5em;
@@ -952,7 +951,7 @@
             .socials-row {
                 display: block;
                 position: relative;
-                bottom: 1.5em;
+                bottom: 2.5em;
                 top: auto;
                 left: 55.2%;
             }
